--- a/index.html
+++ b/index.html
@@ -1963,7 +1963,7 @@
                         <div class="elementor-element elementor-element-e0c6bd4 elementor-widget elementor-widget-text-editor"
                             data-id="e0c6bd4" data-element_type="widget" data-widget_type="text-editor.default">
                             <div class="elementor-widget-container">
-                                <p>Es muy importante para nosotros contar con tu asistencia lo antes posible.</p>
+                                <p>Es muy importante para nosotros contar con tu confirmación antes del 20 de mayo para asignarte tu numero de mesa.</p>
                             </div>
                         </div>
                     </div>
