--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                                             data-id="4e145fcc" data-element_type="widget"
                                             data-widget_type="text-editor.default">
                                             <div class="elementor-widget-container">
-                                                <p>Sábado, 03 de Junio 2023.<br />Ceremonia 06:00 PM.<br />Recepción
+                                                <p>Sábado, 03 de Junio 2023.<br />Ceremonia religiosa 06:00 PM.<br />Recepción
                                                     07:30 PM.</p>
                                                 <p><span style="font-weight: 400;">&#8220;</span>Salón de Fiestas
                                                     Condesa<span style="font-weight: 400;">&#8220;</span></p>
@@ -1920,7 +1920,7 @@
                             data-id="63a469e5" data-element_type="widget" data-widget_type="heading.default">
                             <div class="elementor-widget-container">
                                 <h2 class="elementor-heading-title elementor-size-default">El color rosa esta reservado
-                                    para la quinseañera.</h2>
+                                    para la Quinceañera.</h2>
                             </div>
                         </div>
                     </div>
