--- a/index.html
+++ b/index.html
@@ -1107,8 +1107,8 @@
                                             data-id="4e145fcc" data-element_type="widget"
                                             data-widget_type="text-editor.default">
                                             <div class="elementor-widget-container">
-                                                <p>Sábado, 03 de Junio 2023.<br />Ceremonia religiosa 06:00 PM.<br />Recepción
-                                                    07:30 PM.</p>
+                                                <p>Sábado, 03 de Junio 2023.<br />Recepción
+                                                    06:00 PM.</p>
                                                 <p><span style="font-weight: 400;">&#8220;</span>Salón de Fiestas
                                                     Condesa<span style="font-weight: 400;">&#8220;</span></p>
                                                 <p>Av Ferrocarril Central 2101, esquina, Jesús Cristo Col, Amp Sta
