--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                                             data-id="77708c8" data-element_type="widget"
                                             data-widget_type="heading.default">
                                             <div class="elementor-widget-container">
-                                                <h2 class="elementor-heading-title elementor-size-default">Víctor
+                                                <h2 class="elementor-heading-title elementor-size-default">Victorino 
                                                     Apodaca García</h2>
                                             </div>
                                         </div>
